# localwisper

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
dev-docs/: ARCHITECTURE.md  AUDIO_PIPELINE.md  MIGRATION_STATUS.md  PENDING_TASKS.md  WHISPER_STRATEGY.md
scripts/: benchmark.sh  run-e2e.sh
src/: App.jsx  AppRouter.jsx  i18n.js  index.css  index.html  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/audio/: capture.rs  mod.rs  process.rs  vad.rs  wav.rs
src-tauri/src/commands/: actions.rs  agent.rs  audio.rs  cloud.rs  diarization.rs  dictation.rs  dictionary.rs  enterprise.rs  folders.rs  gcal.rs  mod.rs  notes.rs  notes_extra.rs  settings.rs  streaming.rs  sync.rs  system.rs  transcription.rs  update.rs  whisper_model.rs  window.rs
src-tauri/src/db/: actions.rs  agent_conversations.rs  dictionary.rs  folders.rs  migrations.rs  mod.rs  notes.rs  transcriptions.rs
src-tauri/src/nlp/: embeddings.rs  mod.rs  search.rs
src-tauri/src/sidecars/: llama.rs  mod.rs  qdrant.rs
src-tauri/src/whisper/: engine.rs  mod.rs  model.rs  stream.rs
src/components/: AgentOverlay.jsx  ControlPanel.jsx  ErrorBoundary.jsx  SettingsPage.jsx
src/config/: appConfig.js
src/hooks/: useAudioRecording.js  useClipboard.js  useDialogs.js  useHotkey.js  usePermissions.js  useSettings.js  useUpdater.js  useWhisper.js
src/locales/: prompts.js  translations.js
src/stores/: chatStore.js  noteStore.js  settingsStore.js  streamingProvidersStore.js  transcriptionStore.js
(+2 files in other folders)
