[package]
name = "lightwisper"
version = "0.1.0"
description = "High-performance dictation app — Tauri + whisper-rs in-process"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.83.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"

# Whisper in-process
whisper-rs = "0.14"

# Audio
cpal = "0.15"
rubato = "0.16"

# Database
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# HTTP client
reqwest = { version = "0.12", features = ["stream", "json", "native-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OS keychain
keyring = "3"

# Files & compression
tar = "0.4"
flate2 = "1"
zip = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

# Utilities
once_cell = "1"
parking_lot = "0.12"
num_cpus = "1"
which = "7"
open = "5"
md5 = "0.7"
